resources/scss/layouts/_partners-banner.scss
@use '../abstracts' as *;

.partners-banner {
    background-color: $color-white;
    padding: 0.625rem;
    width: 100%;
    user-select: none;

    @include for-tablet-landscape-up {
        padding: 1.5rem;
    }

    .swiper-wrapper {
        align-items: center;
        transition-timing-function: linear !important;
        pointer-events: none;
    }

    &__logo {
        border-right: 1px solid $color-gray-70;
        padding: 1.25rem 1.875rem;
        text-align: center;

        img {
            min-width: 2.5rem;
            height: 2rem;

            @include for-tablet-landscape-up {
                min-width: 5rem;
            }
        }
    }
}

